--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,9 +35,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/main_imageview_image"
-        app:layout_constraintBottom_toTopOf="@id/main_button_start_game"
+        app:layout_constraintBottom_toTopOf="@id/main_button_settings"
         app:textToggleLeft="Белый"
         app:textToggleRight="Черный" />
+
+    <Button
+        android:id="@+id/main_button_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Настройки"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/main_button_start_game"
+        app:layout_constraintTop_toBottomOf="@id/main_toggleswitch_user" />
 
     <Button
         android:id="@+id/main_button_start_game"
@@ -49,6 +61,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_toggleswitch_user" />
+        app:layout_constraintTop_toBottomOf="@id/main_button_settings" />
 
 </android.support.constraint.ConstraintLayout>
